Completed DI setup

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,7 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    // Hilt with Jetpack Compose Navigation support
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
 }
