Added real-time report

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,7 @@ dependencies {
 
     // Hilt with Jetpack Compose Navigation support
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
+
+    implementation "com.google.accompanist:accompanist-flowlayout:0.28.0"
+
 }
