--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     // Hilt with Jetpack Compose Navigation support
     implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
 
-    implementation "com.google.accompanist:accompanist-flowlayout:0.28.0"
+    // Room
+    implementation "androidx.room:room-runtime:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
 
+    // Room with Kotlin coroutines & Flow
+    implementation "androidx.room:room-ktx:2.6.1"
 }
