--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.expensetracker"
-        minSdk 24
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -54,11 +54,14 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
 
     // compose
-    implementation platform("androidx.compose:compose-bom:2023.03.00") // Or latest
+    implementation platform("androidx.compose:compose-bom:2023.08.00") // Or latest
     implementation "androidx.compose.ui:ui"
-    implementation "androidx.compose.material3:material3"
+//    implementation "androidx.compose.material3:material3"
     implementation "androidx.compose.ui:ui-tooling-preview"
     debugImplementation "androidx.compose.ui:ui-tooling"
+
+    implementation "androidx.compose.material3:material3:1.1.0-beta01"
+
 
     // Core Material icons (small set)
     implementation "androidx.compose.material:material-icons-core"
